Добавить работу с базой данных, дать пользователям возможность бронировать вещи, добавить отзывы.